fix: ferry card - align flex end only for mobile

--- a/src/components/molecules/Cards/FerryCard/FerryCard.module.css
+++ b/src/components/molecules/Cards/FerryCard/FerryCard.module.css
@@ -162,7 +162,7 @@
 }
 
 .arrivalInfo {
-  align-items: flex-end;
+  align-items: flex-start;
 }
 
 .timeText {
